<resources>
    <string name="app_name">Alumno de TTA</string>
    <string name="app_name_menu">Evaluación de TTA</string>
    <string name="app_name_test">Nuevo Test</string>
    <string name="app_name_ejercicio">Nuevo Ejercicio</string>


    <string name="user">User</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_edit">Introduce password</string>
    <string name="test_layout">Layout</string>
    <string name="button_send_test">Send</string>
    <string name="button_send">Enviar</string>
    <string name="button_advise">Ayuda</string>
    <string name="menu0">Bienvenido John Doe</string>
    <string name="menu">Leccion1:Introducción a Android</string>

    <string name="login_error">Error de acceso</string>
    <string name="login_bien">acceso</string>


    <string name="enunciado">¿Cual de las siguientes opciones NO se indica en el fichero de manifiesto de la app?</string>
    <string name="radioButton0">Version de la aplicacion</string>
    <string name="radioButton1">Listado de componentes de la aplicacion</string>
    <string name="radioButton2">Opciones del menu de ajustes</string>
    <string name="radioButton3">Nivel minimo de la API Android requerida</string>
    <string name="radioButton4">Nombre del paquete java de la aplicacion</string>

    <string name="TextAyuda">The manifest describes the components of aplication: the activities, services, broadcast receivers, and content providers that the classes that implement each of the components and publishes their capabilities (for example, which Intent messages they can handle). These declarations let the Android system know what the components are and under what connditions they can be launched</string>

    <string name="eunciado_ejercicio">Explica cómo aplicarías el patrón de diseño MVC en el desarrollo de una app para Android</string>
    <string name="ejercicio1">SUBIR FICHERO</string>
    <string name="ejercicio2">SACAR FOTO</string>
    <string name="ejercicio3">GRABAR AUDIO</string>
    <string name="ejercicio4">GRABAR VIDEO</string>

    <string name="no_camera">NO EXISTE CAMARA</string>
    <string name="no_app">No app</string>
    <string name="no_micro">no micro</string>


</resources>
